src/objects/TextBlock__c.object
<CustomObject>
    <fields>
        <fullName>AvailableForProfiles__c</fullName>
        <label>Available for profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickCode__c</fullName>
        <label>Quick Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCountry__c</fullName>
        <globalPicklist>ServiceCountry</globalPicklist>
        <label>Service Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextBlockName__c</fullName>
        <label>Text Block Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextContent__c</fullName>
        <label>Text Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Text Block</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TB-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>SampleText</fullName>
        <active>true</active>
        <label>Sample Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextBlock</fullName>
        <active>true</active>
        <label>Text Block</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>